--- a/hockey.html
+++ b/hockey.html
@@ -2,6 +2,7 @@
 title: Hockey Line Picker
 description: A simple webapp for picking hockey lineups.
 image: '/hlp/imgs/puck192.png'
+link: '/hlp'
 ---
 <!DOCTYPE html>
 <html lang="en-US">
@@ -14,94 +15,87 @@ image: '/hlp/imgs/puck192.png'
 <body>
     <div class="col-cont">
         <main>
-            <a id="home-link" href="/" title="Back">←</a>
-            <header>
-                <div>
-                    <h1></h1>
-                    <h3>App</h3>
-                    <a class="product-link" href="/hlp">Link to product</a>
-                </div>
-                <div class="profile" id="icon" role="img"></div>
-            </header>
-
-            <p>A simple webapp for picking hockey lineups.</p>
-            <figure>
-                <img src="/images/hockey/menu.png" width="250px">
-                <figcaption>Select screen</figcaption>
-            </figure>
-            <figure>
-                <img src="/images/hockey/display.png" width="250px">
-                <figcaption>Display screen</figcaption>
-            </figure>
-            <section>
-                <h2>Features</h2>
-                <ul>
-                    <li>
-                        <h3>Import players from file</h3>
-                        <p>A text file with players seperated by newlines</p>
-                    </li>
-                    <li>
-                        <h3>Add/remove players</h3>
-                    </li>
-                </ul>
-            </section>
-            <section>
-                <h2>Original project</h2>
+            {% include 'back' %}
+            <article>
+                {% include 'project-header' %}
                 <figure>
-                    <div class="gallery">
-                        <img src="/images/hockey/old_menu.png">
-                        <img src="/images/hockey/old_display.png">
-                    </div>
-                    <figcaption>Select and display screens of Code.org project</figcaption>
+                    <img src="/images/hockey/menu.png" width="250px">
+                    <figcaption>Select screen</figcaption>
                 </figure>
-                <p>
-                    Once during 2022, I helped my school comp sci teacher fix an app he had start on
-                    <a href="https://www.code.org">Code.org</a> to help pick his hockey lineups (he was a hockey coach).
-                    He had already had the design set, but the code wasn't working as intended.
-                </p>
-                <p>
-                    Its function is simple: on the right is a list of available players.
-                    Groups of selects represent the various positions (see above left figure). Select a player and it's removed from the roster list.
-                    Click the "Update" button to display the positions in a cleaner format so a screenshot can be taken and sent to the team (see above right figure).
-                </p>
-            </section>
-            <section>
-                <h2>Revamped Project</h2>
-                <p>
-                    A year later, I had completely forgotten about it until he told me, to my surpise, he was still using it.
-                    He also said there was a bug when replacing a player that already been selected.<br>
-                    I figured I might as while rewrite it not in Code.org, but in vanilla HTML and JS, which I hadn't done previously.<br>
-                    It wasn't too difficult and took about 3 days.
-                </p>
-                <h3>Dynamic players</h3>
-                <p>
-                    In the original project, players were hard coded. That's not ideal.
-                    I added an add and remove player button to rectify that. Additionally, I gave the option to import players from a newline seperated text file, as to make it
-                    easier to add a bunch of players. <a download href="/hlp/examples/players.txt">Download example file</a><br>
-                    Unlike the original, the players and their selected positions are saved between refreshes using <a
-                        href="https://developer.mozilla.org/en-US/docs/Web/API/Window/localStorage">localStorage</a>.
-                </p>
-                <h3>PWA</h3>
-                <p>
-                    I also explored making it a compatible
-                    <a href="https://web.dev/learn/pwa/">Progressive Web App</a>.
-                </p>
                 <figure>
                     <img src="/images/hockey/display.png" width="250px">
-                    <figcaption>New display screen</figcaption>
+                    <figcaption>Display screen</figcaption>
                 </figure>
-                <h3>Practice</h3>
-                <p>
-                    Upon request, I later added a page to assist in team selection for practice games.
-                    Similar to the main page, a roster is located on the left and selects on the right.
-                    Choose the players for each team and optionally a team color.
-                </p>
-                <figure>
-                    <img src="/images/hockey/practice.png" width="250px">
-                    <figcaption>Practice page. It looks different than the other screenshots because FireFox was used.</figcaption>
-                </figure>
-                <ins>Note: the selections on this page are not saved and do not affect the main page.</ins>
-            </section>
+                <section>
+                    <h2>Features</h2>
+                    <ul>
+                        <li>
+                            <h3>Import players from file</h3>
+                            <p>A text file with players seperated by newlines</p>
+                        </li>
+                        <li>
+                            <h3>Add/remove players</h3>
+                        </li>
+                    </ul>
+                </section>
+                <section>
+                    <h2>Original project</h2>
+                    <figure>
+                        <div class="gallery">
+                            <img src="/images/hockey/old_menu.png">
+                            <img src="/images/hockey/old_display.png">
+                        </div>
+                        <figcaption>Select and display screens of Code.org project</figcaption>
+                    </figure>
+                    <p>
+                        Once during 2022, I helped my school comp sci teacher fix an app he had start on
+                        <a href="https://www.code.org">Code.org</a> to help pick his hockey lineups (he was a hockey coach).
+                        He had already had the design set, but the code wasn't working as intended.
+                    </p>
+                    <p>
+                        Its function is simple: on the right is a list of available players.
+                        Groups of selects represent the various positions (see above left figure). Select a player and it's removed from the roster list.
+                        Click the "Update" button to display the positions in a cleaner format so a screenshot can be taken and sent to the team (see above right figure).
+                    </p>
+                </section>
+                <section>
+                    <h2>Revamped Project</h2>
+                    <p>
+                        A year later, I had completely forgotten about it until he told me, to my surpise, he was still using it.
+                        He also said there was a bug when replacing a player that already been selected.<br>
+                        I figured I might as while rewrite it not in Code.org, but in vanilla HTML and JS, which I hadn't done previously.<br>
+                        It wasn't too difficult and took about 3 days.
+                    </p>
+                    <h3>Dynamic players</h3>
+                    <p>
+                        In the original project, players were hard coded. That's not ideal.
+                        I added an add and remove player button to rectify that. Additionally, I gave the option to import players from a newline seperated text file, as to make it
+                        easier to add a bunch of players. <a download href="/hlp/examples/players.txt">Download example file</a><br>
+                        Unlike the original, the players and their selected positions are saved between refreshes using <a
+                            href="https://developer.mozilla.org/en-US/docs/Web/API/Window/localStorage">localStorage</a>.
+                    </p>
+                    <h3>PWA</h3>
+                    <p>
+                        I also explored making it a compatible
+                        <a href="https://web.dev/learn/pwa/">Progressive Web App</a>.
+                    </p>
+                    <figure>
+                        <img src="/images/hockey/display.png" width="250px">
+                        <figcaption>New display screen</figcaption>
+                    </figure>
+                    <h3>Practice</h3>
+                    <p>
+                        Upon request, I later added a page to assist in team selection for practice games.
+                        Similar to the main page, a roster is located on the left and selects on the right.
+                        Choose the players for each team and optionally a team color.
+                    </p>
+                    <figure>
+                        <img src="/images/hockey/practice.png" width="250px">
+                        <figcaption>Practice page. It looks different than the other screenshots because FireFox was used.</figcaption>
+                    </figure>
+                    <ins>Note: the selections on this page are not saved and do not affect the main page.</ins>
+                </section>
+            </article>
         </main>
     </div>
     {% include 'footer' %}
