--- a/index.html
+++ b/index.html
@@ -33,10 +33,6 @@
 				margin-bottom: 30px;
 			}
 		}
-
-		.disabled-a {
-			cursor: not-allowed;
-		}
 	</style>
 </head>
 
@@ -61,9 +57,6 @@
 						<a href="terrain">Terrain generator</a>
 					</li>
 					<li>
-						<span class="disabled-a">Cat pixel art generator</span>
-					</li>
-					<li>
 						<a href="website">Website</a>
 					</li>
 					<li>
@@ -72,6 +65,12 @@
 					<li>
 						<a href="tot">The Oregon Trail</a>
 					</li>
+					<!-- <li>
+						<a href="useless-shell">Useless Shell</a>
+					</li>
+					<li>
+						<a href="zvh">Zombies v.s. Humans</a>
+					</li> -->
 					<li>
 						<details>
 							<summary>Misc</summary>
