--- a/passthrough/404.html
+++ b/passthrough/404.html
@@ -21,6 +21,7 @@
     <main style="text-align: center;">
         <h1 style="font-size: min(18lvw, 10em); margin: 0;">404</h1>
         <p>
+            <noscript>owo</noscript>
             <script>
                 // lazy-man's PHP
                 document.currentScript.parentElement.textContent = ["Meow", "mew", "MEOW", "Meowow!", "meow", "meow?", "🐈"][Math.floor(Math.random() * 7)];
