--- a/terrain.html
+++ b/terrain.html
@@ -1,5 +1,6 @@
 ---
 title: Terrain Generator
+link: 'https://github.com/ASoftGlow/OpenGL-Test'
 ---
 <!DOCTYPE html>
 <html lang="en-US">
@@ -11,8 +12,9 @@ title: Terrain Generator
 
 <body>
     <main>
-        {% include 'project-header' %}
+        {% include 'back' %}
         <article>
+            {% include 'project-header' %}
             <div class="elevation carousel">
                 <figure>
                     <img src="/images/terrain/terrain.png">
