--- a/website.html
+++ b/website.html
@@ -12,7 +12,7 @@ image: '/images/favicon.ico'
 
 <body>
     <main>
-        {# include 'back' %}
+        {% include 'back' %}
         <article>
             {% include 'project-header' %}
 
