misc and fix tui font

--- a/zvh.html
+++ b/zvh.html
@@ -285,8 +285,11 @@ description: A remake of a Minecraft minigame
                 Before I started university, I handed off the files to <a href="https://github.com/FilipTV2">FilipTV2</a>, an active player willing to host the game on their server instead.
                 At the time, there were barely any active players, so there wasn't much point in paying for a dead server.
                 Besides, I didn't think I would have much time to moderate and further develop going forward.
-                I'm thankful that FilipTV2 was willing to.<br>
+                I'm thankful that FilipTV2 was willing to so.<br>
                 For reference, they used <a href="https://bloom.host">Bloom Host</a>.
+            </p>
+            <p>
+            However, interest didn't pick up, and it wasn't long until it was (understandably) also shutdown. I've made the code public <a href="https://github.com/asoftglow/zvh">on Github</a> in case someone else wishes to host it or take inspiration.
             </p>
         </article>
     </main>
